@@ -8,6 +8,8 @@ Post-v3.1.0
      * Added new options --[ovsdb-server|ovs-vswitchd]-umask=MODE to set umask
        value when starting OVS daemons.  E.g., use --ovsdb-server-umask=0002
        in order to create OVSDB sockets with access mode of 0770.
+   - QoS:
+     * Added new configuration option 'jitter' for a linux-netem QoS type.
 
 
 v3.1.0 - 16 Feb 2023
